--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 @use "sass:math";
 :root {
-  --theme-color: #684df4;
-  --theme-color2: #684df4;
+  --theme-color: #4786E6;
+  --theme-color2: #4786E6;
   --title-color: #141d38;
   --body-color: #737887;
   --smoke-color: #f5f5f5;
@@ -1862,11 +1862,11 @@ textarea.is-invalid {
   background-color: var(--theme-color);
   color: var(--white-color);
   font-family: var(--body-font);
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   line-height: 1;
-  padding: 20.5px 20px;
-  min-width: 144px;
+  padding: 12.5px 20px;
+  min-width: 126px;
   border-radius: 4px;
 }
 .th-btn:before,
@@ -5374,7 +5374,7 @@ a.text-theme:hover,
   }
 }
 .main-menu a {
-  display: block;
+  /* display: block; */
   position: relative;
   font-weight: 600;
   font-size: 14px;
@@ -5624,7 +5624,7 @@ a.text-theme:hover,
 .header-links li {
   display: inline-block;
   position: relative;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
 }
 .header-links li:not(:last-child) {
@@ -5651,16 +5651,17 @@ a.text-theme:hover,
 }
 .header-social .social-title {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   display: inline-block;
   margin: 0 15px 0 0;
   color: var(--body-color);
 }
 .header-social a {
-  font-size: 16px;
+  font-size: 12px;
   display: inline-block;
   color: var(--body-color);
-  margin: 0 15px 0 0;
+  margin: 0 10px 0 0;
+
 }
 .header-social a:last-child {
   margin-right: 0;
@@ -5818,7 +5819,7 @@ a.text-theme:hover,
   background-color: #e1eaff;
 }
 .header-layout2 .header-top {
-  padding: 17px 0;
+  padding: 3px 0;
   background-color: var(--theme-color);
   --body-color: #fff;
 }
@@ -6568,8 +6569,7 @@ a.text-theme:hover,
   border-color: var(--theme-color);
 }
 .widget-area {
-  padding-top: var(--section-space);
-  padding-bottom: 66px;
+  padding-top: 65px;
 }
 .footer-menu {
   margin: 0;
@@ -6690,11 +6690,12 @@ a.text-theme:hover,
   color: var(--theme-color);
 }
 .copyright-wrap {
-  padding: 22px 0;
+  padding: 7px 0;
   background-size: 100% auto;
 }
 .copyright-text {
   margin: 0;
+  font-size: 12px;
 }
 .copyright-text a {
   color: var(--theme-color);
@@ -6715,6 +6716,7 @@ a.text-theme:hover,
   -ms-flex-align: center;
   align-items: center;
   gap: 20px;
+  margin-bottom: 15px;
 }
 .footer-contact-wrap {
   display: grid;
@@ -6723,13 +6725,13 @@ a.text-theme:hover,
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  
 }
 .footer-contact_icon {
-  width: 70px;
-  height: 70px;
-  line-height: 70px;
-  min-width: 70px;
-  font-size: 30px;
+
+  line-height: 30px;
+  min-width: 30px;
+  font-size: 15px;
   background-color: var(--white-color);
   color: var(--theme-color);
   border-radius: 5px;
@@ -6759,10 +6761,12 @@ a.text-theme:hover,
   margin-bottom: 5px;
 }
 .footer-contact_link {
-  display: inline-block;
   color: var(--body-color);
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 16px;
+  font-weight: 300;
+  font-family: var(--body-font);
+  display: block;
+  border-bottom: none;
 }
 .footer-contact_link:hover {
   color: var(--title-color);
@@ -16536,6 +16540,13 @@ span.select2-selection.select2-selection--single:focus {
 }
 .about-text {
   color: #8e939d;
+  margin-top: -15px;
+}
+.about-footer-text{
+  color: #8e939d;
+  margin-left:18px;
+  max-width:400px;
+  margin-top: -15px;
 }
 .img-box11 {
   text-align: end;
@@ -19879,7 +19890,7 @@ span.select2-selection.select2-selection--single:focus {
   margin-bottom: 15px;
 }
 .testi-box5_image {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .testi-box5 .testi-box5_img {
   min-width: 60px;
@@ -19893,9 +19904,8 @@ span.select2-selection.select2-selection--single:focus {
   margin-bottom: 0px;
 }
 .testi-box5 .testi-box5_text {
-  border-bottom: 1px solid #eaeaea;
-  padding-bottom: 30px;
-  margin-bottom: 40px;
+  /* border-bottom: 1px solid #eaeaea; */
+
 }
 @media (max-width: 991px) {
   .testi-box5 .testi-box5_text {
@@ -27066,7 +27076,7 @@ span.select2-selection.select2-selection--single:focus {
 }
 .service-btn {
   min-width: 100%;
-  min-height: 317px;
+  min-height: 350px;
   background-color: var(--theme-color);
   border-radius: 30px;
   display: -webkit-box;
