--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --body-bg-color: #e5ecef;
+  --body-bg-color: #ffffff;
   --theme-bg-color: #fafafb;
   --body-font: "Poppins", sans-serif;
   --body-color: #2f2f33;
