carrer section login page create and mobile view side manu create

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3093,7 +3093,7 @@ hr.title-line {
   background-color: var(--smoke-color2) !important;
 }
 .bg-smoke3 {
-  background-color: var(--smoke-color3) !important;
+  background-color: var(--white-color) !important;
 }
 .bg-white {
   background-color: var(--white-color) !important;
