--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,7 @@
 @use "sass:math";
 :root {
-  --theme-color: #4786E6;
-  --theme-color2: #4786E6;
+  --theme-color: #4786e6;
+  --theme-color2: #4786e6;
   --title-color: #141d38;
   --body-color: #737887;
   --smoke-color: #f5f5f5;
@@ -1471,10 +1471,19 @@ textarea.is-invalid {
   width: 100% !important;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  -webkit-transition: opacity 1s, -webkit-transform 1s;
-  transition: opacity 1s, -webkit-transform 1s;
-  transition: transform 1s, opacity 1s;
-  transition: transform 1s, opacity 1s, -webkit-transform 1s;
+  -webkit-transition:
+    opacity 1s,
+    -webkit-transform 1s;
+  transition:
+    opacity 1s,
+    -webkit-transform 1s;
+  transition:
+    transform 1s,
+    opacity 1s;
+  transition:
+    transform 1s,
+    opacity 1s,
+    -webkit-transform 1s;
 }
 .slick-3d-active .slick-3d-next,
 .slick-3d-active .slick-3d-prev,
@@ -5661,7 +5670,6 @@ a.text-theme:hover,
   display: inline-block;
   color: var(--body-color);
   margin: 0 10px 0 0;
-
 }
 .header-social a:last-child {
   margin-right: 0;
@@ -6725,10 +6733,8 @@ a.text-theme:hover,
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  
 }
 .footer-contact_icon {
-
   line-height: 30px;
   min-width: 30px;
   font-size: 15px;
@@ -12657,7 +12663,9 @@ ul.comment-list .th-comment-item:first-child > .th-post-comment {
   -webkit-transition: -webkit-transform ease 0.4s;
   transition: -webkit-transform ease 0.4s;
   transition: transform ease 0.4s;
-  transition: transform ease 0.4s, -webkit-transform ease 0.4s;
+  transition:
+    transform ease 0.4s,
+    -webkit-transform ease 0.4s;
 }
 @media (max-width: 1199px) {
   .popup-search-box form {
@@ -16542,10 +16550,10 @@ span.select2-selection.select2-selection--single:focus {
   color: #8e939d;
   margin-top: -15px;
 }
-.about-footer-text{
+.about-footer-text {
   color: #8e939d;
-  margin-left:18px;
-  max-width:400px;
+  margin-left: 18px;
+  max-width: 400px;
   margin-top: -15px;
 }
 .img-box11 {
@@ -19905,7 +19913,6 @@ span.select2-selection.select2-selection--single:focus {
 }
 .testi-box5 .testi-box5_text {
   /* border-bottom: 1px solid #eaeaea; */
-
 }
 @media (max-width: 991px) {
   .testi-box5 .testi-box5_text {
@@ -23605,13 +23612,17 @@ span.select2-selection.select2-selection--single:focus {
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 999999;
-  -webkit-transition: 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
+  -webkit-transition:
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
     0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
-  transition: 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
+  transition:
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
     0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
-  transition: 0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+  transition:
+    0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
     0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity;
-  transition: 0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+  transition:
+    0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
     0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
     0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
 }
@@ -31556,7 +31567,6 @@ span.select2-selection.select2-selection--single:focus {
   transform: rotateY(180deg);
 }
 .process-area6 {
-  background-color: #16181d;
   -webkit-mask-repeat: repeat-x;
   mask-repeat: repeat-x;
   -webkit-mask-size: cover;
