--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -31171,7 +31171,7 @@ span.select2-selection.select2-selection--single:focus {
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  color: var(--white-color);
+  color: var(--black-color);
   padding: 31px 35px 34px 75px;
   margin-bottom: 0px;
 }
