--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,17 @@
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 999999;
-  -webkit-transition: 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
+  -webkit-transition:
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
     0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
-  transition: 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
+  transition:
+    0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
     0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
-  transition: 0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+  transition:
+    0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
     0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity;
-  transition: 0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+  transition:
+    0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
     0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity,
     0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) -webkit-transform;
 }
